--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Cake-Shop</title>
+    <title>حلويات الورد</title>
 </head>
 <body>
     <nav>
@@ -20,6 +20,8 @@
         </div>
     </nav>
 
+    <div class="herosection">
 
+    </div>
 </body>
 </html>
