--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#">تواصل معنا</a></li>
             </ul>
                 <div class="logo">
-                    <img src="./assests/logo.svg" alt="logo">
+                    <img src="./assests/Logo.png" alt="logo">
                 </div>
         </div>
     </nav>
