finish last page

--- a/index.html
+++ b/index.html
@@ -7,21 +7,73 @@
     <title>حلويات الورد</title>
 </head>
 <body>
+    <!-- القائمة الرئيسية  -->
     <nav>
-        <div class="container">
+        <section class="container">
             <ul>
                 <li><a href="#">الرئيسية</a></li>
                 <li><a href="#">تسوق</a></li>
                 <li><a href="#">تواصل معنا</a></li>
             </ul>
-                <div class="logo">
+                <section class="logo">
                     <img src="./assests/Logo.png" alt="logo">
-                </div>
-        </div>
+                </section>
+        </section>
     </nav>
+<!-- القائمة الرئيسية  -->
+    <!-- الصورة الرئيسية  -->
+    <main class="hero-section">
+        <section class="container">
+            <h1> <span>سريع</span> , <span>مميز</span> , <span>شهي</span> </h1>
+            <button><a href="#"> تسوق الان</a> </button>
+        </section>
+    </main>
+  <!-- الصورة الرئيسية  -->
 
-    <div class="herosection">
+    <!-- الخدمات المقدمة  -->
+    <section class="services-section">
+        <section class="container">
+            <h2>خدماتنا</h2>
 
-    </div>
+            <section class="services">
+                <article class="service">
+                    <div class="content">
+                        <h3 > كيك</h3>
+                        <p> اكتشف فن صناعة الكيك مع إبداعاتنا المذهلة واللذيذة، المصنوعة بإتقان لتناسب أي مناسبة. من أعياد الميلاد إلى حفلات الزفاف، تُعد كيكاتنا تحفًا فنية من النكهة والتصميم، مصممة خصيصًا وفقًا لذوقك الفريد. باستخدام أجود المكونات فقط، نضمن أن يكون كل كيك ممتعًا للمذاق كما هو رائع للمظهر. اجعل احتفالاتك استثنائية حقًا مع كيكاتنا المميزة، حيث يلتقي الأناقة والمذاق في تناغم مثالي.
+                        </p>
+                    
+                        <button><a href="#"> تسوق الان </a> </button>
+                    </div>
+                    <div class="img">
+                        <img src="./assests/services-img/cake-1.webp" alt="service">
+                    </div>
+
+                </article>
+
+                <article class="service">
+                    <div class="img">
+                        <img src="./assests/services-img/cake-2.webp" alt="service">
+                    </div>
+                    <div class="content">
+                        <h3 > المطعم</h3>
+<p>
+
+    استمتع بروعة الطهي في مطعمنا الشهير، حيث يلتقي التميز بالنكهة. يقدم قائمة متنوعة من الأطباق الفاخرة، بدءًا من المأكولات الشهية وصولًا إلى الحلويات الرائعة، جميعها مُحضرة من مكونات طازجة وعالية الجودة. سواء كنت تبحث عن وجبة غير رسمية أو تحتفل بلحظة خاصة، يوفر مطعمنا أجواء دافئة وأنيقة تجعل من كل وجبة تجربة لا تُنسى. ارتقِ بتجربة تناول الطعام مع لمسة من السحر السعودي وخدمة عالمية المستوى.
+
+
+</p>                       
+                    
+                        <button><a href="#"> تسوق الان </a> </button>
+                    </div>
+
+
+                </article>
+
+            </section>
+            </section>
+
+        </section>
+    <!-- الخدمات المقدمة  -->
+
 </body>
 </html>
