--- a/index.html
+++ b/index.html
@@ -75,5 +75,38 @@
         </section>
     <!-- الخدمات المقدمة  -->
 
+
+    <!--  القائمة السفلية  -->
+    <footer class="footer">
+        <ul class="nav-links">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Media</a>
+            <a href="#">Gallery</a>
+            <a href="#">Contact</a>
+        </ul>
+
+        <div class="social-icons">
+            <a href="https://facebook.com" target="_blank" rel="noopener noreferrer">
+                <img src="https://img.icons8.com/fluent/30/000000/facebook-new.png" alt="Facebook" />
+            </a>
+            <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer">
+                <img src="https://img.icons8.com/fluent/30/000000/linkedin-2.png" alt="LinkedIn" />
+            </a>
+            <a href="https://instagram.com" target="_blank" rel="noopener noreferrer">
+                <img src="https://img.icons8.com/fluent/30/000000/instagram-new.png" alt="Instagram" />
+            </a>
+            <a href="https://messenger.com" target="_blank" rel="noopener noreferrer">
+                <img src="https://img.icons8.com/fluent/30/000000/facebook-messenger--v2.png" alt="Messenger" />
+            </a>
+            <a href="https://twitter.com" target="_blank" rel="noopener noreferrer">
+                <img src="https://img.icons8.com/fluent/30/000000/twitter.png" alt="Twitter" />
+            </a>
+        </div>
+        
+        <p class="copyright">&copy; 2022 Company Ltd. All rights reserved.</p>
+    </footer>
+    <!--  القائمة السفلية  -->
 </body>
 </html>
