finish the website

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <nav>
         <section class="container">
             <ul>
-                <li><a href="#">الرئيسية</a></li>
-                <li><a href="#">تسوق</a></li>
-                <li><a href="#">تواصل معنا</a></li>
+                <li><a href="index.html">الرئيسية</a></li>
+                <li><a href="store.html">تسوق</a></li>
+                <li><a href="contact.html">تواصل معنا</a></li>
             </ul>
                 <section class="logo">
                     <img src="./assests/Logo.png" alt="logo">
